Tests/Runtime2/Error/Nested/.build/throwinnererror.pr
[
  {
    "name": "ThrowInnerError",
    "description": "Compiles ThrowInnerError goal step to an error throw action with message \u0027inner error\u0027 and StatusCode defaulting to 500 (pr: null indicates no additional parameter).",
    "comment": null,
    "steps": [
      {
        "index": 0,
        "text": "throw error \u0022inner error\u0022",
        "lineNumber": 2,
        "indent": 0,
        "comment": null,
        "actions": [
          {
            "module": "error",
            "action": "throw",
            "parameters": [
              {
                "name": "Message",
                "value": "inner error",
                "type": "string"
              }
            ],
            "return": null,
            "defaults": null
          }
        ],
        "intent": null,
        "onError": null,
        "cache": null,
        "timeout": null,
        "waitForExecution": true
      }
    ],
    "subGoals": [],
    "visibility": 1,
    "path": "/ThrowInnerError.goal",
    "prPath": "/.build/throwinnererror.pr",
    "hash": "7d8dc891f5dc542946212b275eb7dd377c3208351c17761e0c6b02e233a7cc75",
    "builderVersion": "0.3",
    "isSetup": false,
    "isEvent": false,
    "isSystem": false,
    "isTest": false,
    "inputParameters": null
  }
]